tests/errors/string03.c
int main(void){
	char* string = . _ " . ;
}
